# CMake-Tutorial

./: .gitmodules  CMakeLists.txt  main.cpp
include/: Project.hpp  TestClass.hpp
src/: Project.cpp  TestClass.cpp
